# cogserver

./: .gitignore  CMakeLists.txt  README.md
.circleci/: Dockerfile.build  config.yml
cmake/: CMakeLists.txt  CogServerConfig.cmake.in
examples/: CMakeLists.txt  README.md
examples/mcp/: CLAUDE-AtomSpace.md  CLAUDE.md  CMakeLists.txt  (+5 more)
examples/visualizer/: CMakeLists.txt  README.md  atomspace-cache.js  graph-view.js  graph.html  graph.js  index.html  landing.js  styles.css  theme.js  tree-view.html  tree-view.js  type-view.html  type-view.js  visualizer.js
lib/: CMakeLists.txt  CogServerConfig.cmake.in  cogserver.conf  opencog-test.conf  opencog.conf
opencog/: CMakeLists.txt
opencog/cogserver/: CMakeLists.txt  version.h.in
opencog/cogserver/atoms/: CMakeLists.txt  CogServerNode.cc  CogServerNode.h
opencog/cogserver/attic/: README.md
opencog/cogserver/attic/proxy/: CMakeLists.txt  Proxy.h  README.md  ThruCommands.h  WriteThruProxy.cc  WriteThruProxy.h
opencog/cogserver/mcp/: AtomSpace-Details.md  AtomSpace-Overview.md  AtomTypes-Prompt.md  CLAUDE.md  CMakeLists.txt  CogServer-Prompt.md  CreateAtom-Prompt.md  DesigningStructures-Prompt.md  PatternMatching-Prompt.md  QueryAtom-Prompt.md  WorkingWithValues-Prompt.md
opencog/cogserver/mcp-docs/: AdvancedPatternMatching-Prompt.md  AtomTypes-Resource.md  CMakeLists.txt  CogServer-Prompt.md  CogServer-Resource.md  CreateAtom-Prompt.md  PatternMatching-Resource.md  QueryAtom-Prompt.md  Streams-Prompt.md  Streams-Resource.md  UsingStorage.md  WorkingWithValues-Prompt.md  WorkingWithValues-Resource.md
opencog/cogserver/mcp-eval/: CMakeLists.txt  McpEval.cc  McpEval.h
opencog/cogserver/mcp-tools/: CMakeLists.txt  McpPlugAtomSpace.cc  McpPlugAtomSpace.h  McpPlugEcho.cc  McpPlugEcho.h  McpPlugin.h
opencog/cogserver/modules/: BuiltinRequestsModule.cc  BuiltinRequestsModule.h  CMakeLists.txt  ModuleManagement.cc  ModuleManagement.h  README.md  ShutdownRequest.cc  ShutdownRequest.h
opencog/cogserver/modules/agents/: Agent.h  AgentRunnerBase.cc  AgentRunnerBase.h  AgentRunnerThread.cc  AgentRunnerThread.h  AgentsModule.cc  AgentsModule.h  CMakeLists.txt  README.md  Scheduler.cc  Scheduler.h  SystemActivityTable.cc  SystemActivityTable.h
opencog/cogserver/modules/commands/: BuiltinRequestsModule.cc  BuiltinRequestsModule.h  CMakeLists.txt  ListModulesRequest.cc  ListModulesRequest.h  ListRequest.cc  ListRequest.h  LoadModuleRequest.cc  LoadModuleRequest.h  ModuleManagement.cc  ModuleManagement.h  Request.h  ShutdownRequest.cc  ShutdownRequest.h  UnloadModuleRequest.cc  UnloadModuleRequest.h
opencog/cogserver/modules/events/: AtomSpacePublisherModule.cc  AtomSpacePublisherModule.h  README.md
opencog/cogserver/modules/python/: CMakeLists.txt  PyMindAgent.h  PyRequest.cc  PythonModule.cc  PythonModule.h
opencog/cogserver/network/: CMakeLists.txt  ConsoleSocket.cc  ConsoleSocket.h  NetworkServer.cc  NetworkServer.h  README.md  ServerSocket.cc  ServerSocket.h
opencog/cogserver/proxy/: CMakeLists.txt  Proxy.h  README.md  ReadThruProxy.cc  ReadThruProxy.h  ThruCommands.cc  ThruProxy.cc  ThruProxy.h  WriteThruProxy.cc  WriteThruProxy.h
opencog/cogserver/python/: CMakeLists.txt  __init__.py  cogserver.py
opencog/cogserver/python/opencog/: __init__.py  cogserver.py
opencog/cogserver/scm/: cogserver.scm
opencog/cogserver/server/: BaseServer.cc  BaseServer.h  BuiltinRequestsModule.cc  CMakeLists.txt  CogServer.cc  CogServer.h  CogServerMain.cc  CogServerSCM.cc  MCPServer.cc  MCPServer.h  Module.h  ModuleManager.cc  ModuleManager.h  PageServer.cc  PageServer.h  Proxy.h  README  README.md  Registry.h  Request.cc  Request.h  RequestClassInfo.h  RequestManager.cc  RequestManager.h  ServerConsole.cc  ServerConsole.h  UnixMCPServer.cc  UnixMCPServer.h  WebServer.cc  WebServer.h  favicon.ico.base64
opencog/cogserver/shell/: CMakeLists.txt  GenericShell.cc  GenericShell.h  JsonShell.cc  JsonShell.h  JsonShellModule.cc  JsonShellModule.h  McpEval.cc  McpEval.h  McpPlugEcho.cc  McpPlugEcho.h  McpPlugin.h  McpShell.cc  McpShell.h  McpShellModule.cc  PythonShell.cc  PythonShell.h  PythonShellModule.cc  PythonShellModule.h  SchemeShell.cc  SchemeShell.h  SchemeShellModule.cc  SchemeShellModule.h  SexprShell.cc  SexprShell.h  SexprShellModule.cc  SexprShellModule.h  ShellModule.h  TopEval.cc  TopEval.h  TopShell.cc  TopShell.h  TopShellModule.cc  TopShellModule.h  WebEval.cc  WebEval.h  WebShell.cc  WebShell.h  WebShellModule.cc
opencog/cogserver/types/: CMakeLists.txt  cogserver_types.script  cogserver_types_init.cc
opencog/cython/: README.md  setup.py
opencog/cython/opencog/: CMakeLists.txt  __init__.py  agent.pyx  cogserver.pxd  cogserver.pyx  cogserver_type_constructors.pyx
opencog/network/: CMakeLists.txt  ConsoleSocket.cc  ConsoleSocket.h  GenericShell.cc  GenericShell.h  NetworkServer.cc  NetworkServer.h  README.md  ServerSocket.cc  ServerSocket.h  SocketManager.cc  SocketManager.h  WebSocket.cc  WebSocket.h
opencog/persist/: CMakeLists.txt
opencog/persist/cog-storage/: CMakeLists.txt  CogIO.cc  CogPersistSCM.cc  CogPersistSCM.h  CogStorage.cc  CogStorage.h  README.md
opencog/persist/scm/: persist-cog.scm
tests/: CMakeLists.txt
tests/cython/: CMakeLists.txt  PyEvalUTest.cxxtest  PythonModuleUTest.cxxtest  README.md  test_cogserver.py
tests/http/: CMakeLists.txt  HttpUTest.cxxtest  WebSocketUTest.cxxtest
tests/mcp/: CMakeLists.txt  MCPUTest.cxxtest
tests/modules/: AgentModuleUTest.cxxtest  AgentUTest.cxxtest  CMakeLists.txt
tests/persist/: CMakeLists.txt
tests/persist/cog/: BasicSaveUTest.cxxtest  CMakeLists.txt  DeleteUTest.cxxtest  FetchUTest.cxxtest  LargeFlatUTest.cxxtest  LargeZipfUTest.cxxtest  MultiPersistUTest.cxxtest  MultiUserUTest.cxxtest  PersistUTest.cxxtest  ValueSaveUTest.cxxtest
tests/proxy/: CMakeLists.txt  WriteThruProxyUTest.cxxtest
tests/scm/: CMakeLists.txt  cog-server-test.scm
tests/server/: AgentModuleUTest.cxxtest  AgentUTest.cxxtest  CMakeLists.txt
tests/shell/: CMakeLists.txt  IPv6UTest.cxxtest  JsonShellUTest.cxxtest  McpShellUTest.cxxtest  ShellUTest.cxxtest
(+20 files in other folders)
