INCLUDE_DIRECTORIES(
	${Python3_INCLUDE_DIRS}
)

ADD_CXXTEST(PyEvalUTest)

TARGET_LINK_LIBRARIES(PyEvalUTest
	py-shell
	# ${COGSERVER_LIBRARIES}
	${ATOMSPACE_LIBRARIES}
	${COGUTIL_LIBRARY}
)

###IF (HAVE_NOSETESTS)
###
###	ADD_TEST(CythonServer ${NOSETESTS_EXECUTABLE} -vs
###		${CMAKE_SOURCE_DIR}/tests/cython/server/)
###		SET_PROPERTY(TEST CythonServer
###			PROPERTY ENVIRONMENT
###			"PYTHONPATH=${PYTHON_ROOT}:${PROJECT_BINARY_DIR}/opencog/cython:${PYTHON_ROOT}"
###			"GUILE_LOAD_PATH=${GUILE_LOAD_PATH}"
###			)
###
###ENDIF (HAVE_NOSETESTS)
