INCLUDE_DIRECTORIES (
	${PROJECT_SOURCE_DIR}/opencog/util
	${PROJECT_SOURCE_DIR}/opencog/atomspace
	${PROJECT_SOURCE_DIR}/opencog/cogserver/server
)

LINK_DIRECTORIES(
	${PROJECT_BINARY_DIR}/opencog/atomspace
	${PROJECT_BINARY_DIR}/opencog/cogserver/server
)

LINK_LIBRARIES(
	server
	servernode
	cogserver-types
	${ATOMSPACE_LIBRARIES}
)

ADD_CXXTEST(JsonShellUTest)
TARGET_LINK_LIBRARIES(JsonShellUTest json-shell)

IF (HAVE_MCP)
	ADD_CXXTEST(McpShellUTest)
	TARGET_LINK_LIBRARIES(McpShellUTest mcp-shell mcp-eval)
ENDIF (HAVE_MCP)

ADD_CXXTEST(IPv6UTest)
ADD_CXXTEST(ShellUTest)

# Set COGSERVER_MODULE_PATH so modules can be found in the build directory
SET(COGSERVER_TEST_MODULE_PATH
	"COGSERVER_MODULE_PATH=${PROJECT_BINARY_DIR}/opencog/cogserver/modules:${PROJECT_BINARY_DIR}/opencog/cogserver/shell")
SET_PROPERTY(TEST JsonShellUTest APPEND PROPERTY ENVIRONMENT ${COGSERVER_TEST_MODULE_PATH})
SET_PROPERTY(TEST IPv6UTest APPEND PROPERTY ENVIRONMENT ${COGSERVER_TEST_MODULE_PATH})
SET_PROPERTY(TEST ShellUTest APPEND PROPERTY ENVIRONMENT ${COGSERVER_TEST_MODULE_PATH})
IF (HAVE_MCP)
	SET_PROPERTY(TEST McpShellUTest APPEND PROPERTY ENVIRONMENT ${COGSERVER_TEST_MODULE_PATH})
ENDIF (HAVE_MCP)
