
# By default, the install location is /usr/local/share/cogserver/mcp/
INSTALL(FILES
	AdvancedPatternMatching-Resource.md
	AtomSpace-Details.md
	AtomSpace-Overview.md
	AtomTypes-Resource.md
	CogServer-Resource.md
	CreateAtom-Resource.md
	DesigningStructures-Resource.md
	QueryAtom-Resource.md
	Streams-Resource.md
	WorkingWithValues-Resource.md
	PatternMatching-Resource.md
	DESTINATION share/cogserver/mcp
	COMPONENT mcp
)
