INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_CURRENT_BINARY_DIR}
)

ADD_LIBRARY (mcp-eval SHARED
	McpEval.cc
)
TARGET_LINK_LIBRARIES(mcp-eval
	PUBLIC
		mcp-tools
		${ATOMSPACE_STORAGE_LIBRARIES}
	PRIVATE
		${JSONCPP_LIBRARIES}
)

INSTALL (TARGETS mcp-eval
	EXPORT CogServerTargets
	DESTINATION "${CMAKE_INSTALL_LIBDIR}/opencog"
)

INSTALL (FILES
	McpEval.h
	DESTINATION "include/opencog/cogserver/mcp-eval"
)
