
# By default, the install location is /usr/local/share/cogserver/mcp/
INSTALL(FILES
	AdvancedPatternMatching-Prompt.md
	AtomSpace-Details.md
	AtomSpace-Overview.md
	AtomTypes-Prompt.md
	CogServer-Prompt.md
	CreateAtom-Prompt.md
	DesigningStructures-Prompt.md
	QueryAtom-Prompt.md
	WorkingWithValues-Prompt.md
	PatternMatching-Prompt.md
	DESTINATION share/cogserver/mcp
	COMPONENT mcp
)
